<resources>
    <string name="app_name">Nusaliciouss</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">MASUK</string>
    <string name="phone">Nomor Handphone</string>
    <string name="name">Nama Lengkap</string>
    <string name="register">DAFTAR AKUN</string>
    <string name="welcome">SELAMAT DATANG</string>
    <string name="logo">NL</string>
    <string name="rice_box">RiceBox</string>
    <string name="buffet">Prasmanan</string>
    <string name="office">Kantoran</string>
    <string name="breaking">Coffee_Break</string>
    <string name="shaped">Tumpeng</string>
    <string name="Basket">Rantang</string>
    <string name="traditional">Tradisional</string>
    <string name="anymore">Lainnya</string>
    <string name="remove">Hapus</string>
    <string name="buy">Beli</string>
    <string name="detail">detail menu</string>
    <string name="title_menu">title menu</string>
    <string name="Title">Judul</string>
    <string name="rp">Rp.</string>
    <string name="date">Tanggal Pengiriman*</string>
    <string name="time">Pilih Jam</string>
    <string name="fav">Favorite</string>
    <string name="_100_pcs">100 Pcs</string>
    <string name="tips">Tips: msl Lantai 4</string>
    <string name="drink">Drink</string>
    <string name="developer">Hi, Victorio</string>
    <string name="you_money">Saldo anda</string>
    <string name="money">Rp. 100000</string>
    <string name="top">Top Up</string>
    <string name="disc">Diskon</string>
    <string name="stay_at_home">Stay At Home</string>
    <string name="home">Home</string>
    <string name="order">Pesanan</string>
    <string name="chart">Keranjang</string>
    <string name="payment">Pembayaran</string>
    <string name="account">Akun</string>
    <string name="packet">Paket Langganan</string>
    <string name="desc_packet">Untuk Semua</string>
    <string name="copyright">Copyright VIPWorkSpace</string>
    <string name="history">Riwayat</string>
    <string name="duration">Durasi</string>
    <string name="time_eat">Jam makan</string>
    <string name="quantity">5x</string>
    <string name="price_item">Rp.1520000</string>
    <string name="ready_pay">Transaksi Siap Bayar</string>
    <string name="pay">Bayar</string>
    <string name="order_konfirmasi">Konfirmasi Pemesanan</string>
    <string name="location_delivery">Alamat Penerima</string>
    <string name="reception">Nama Penerima</string>
    <string name="delivery_schedule">Jadwal Pengiriman</string>
    <string name="remove_chart">Hapus Keranjang</string>
    <string name="total_bill">Total tagihan :</string>
    <string name="your_balance">Saldo anda :</string>
    <string name="process">Proses</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="service_fee">Biaya Layanan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="summary_payment">Ringkasan Pembayaran</string>
    <string name="free">Gratis</string>
    <string name="saldo_pay">Saldo Gpay</string>
    <string name="gpay">Gunakan Gpay</string>
    <string name="buy_again">Beli lagi</string>
    <string name="dpawon">Dpawon Katering</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Alamat Penerima</string>
    <string name="contact">Kontak Telepon</string>
    <string name="tip">Petunjuk Lokasi</string>
    <string name="email2">xae@nusamandiri.ac.id</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="number_phone">Nomer Handphone</string>
    <string name="hint">pager hijau ada boneka gundam</string>
    <string name="search">cari menu</string>
    <string name="empty">Keranjang Kosong, Yuk Pesan</string>
    <string name="order_empty">Belum ada pesanan, Yuk Pesan !</string>
    <string name="riwayat_order">Belum ada riwayat sobat Nusa</string>
    <string name="waktu">Waktu Pengiriman*</string>
    <string name="harga">2550000</string>
    <string name="term_condition">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to vipworkspace. vipworkspace is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for. The Nusalicious app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Nusalicious app won’t work properly or at all. The app does use third party services that declare their own Terms and Conditions. Link to Terms and Conditions of third party service providers used by the app * [Google Play Services](https://policies.google.com/terms) * [Google Analytics for Firebase](https://firebase.google.com/terms/analytics) You should be aware that there are certain things that vipworkspace will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but vipworkspace cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left. If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app. Along the same lines, vipworkspace cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, vipworkspace cannot accept responsibility. With respect to vipworkspace’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. vipworkspace accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app. At some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. vipworkspace does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device. **Changes to This Terms and Conditions** We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These terms and conditions are effective as of 2020-07-13 **Contact Us** If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at Vipworkspace20@gmail.com.)</string>
    <string name="title_term_condition">**Terms and Conditions**</string>
</resources>