<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="6dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@android:color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/loading" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:text="@string/title_menu"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textColor="@android:color/black"
            android:text="@string/_100_pcs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/img_item_photo"
            android:text="Dalam proses" />




        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_report"
                android:background="@color/Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/White_monotone"
                android:text="Komplain"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />


            <Button
                android:id="@+id/btn_buy"
                android:background="@color/Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/White_monotone"
                android:text="@string/buy_again"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>